--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,58 @@
     transform: rotate(360deg);
   }
 }
+
+.btn-primary {
+  color: #fff !important;
+  background-color: #00204e !important;
+  border-color: #051938 !important;
+  border-radius: 10px;
+  margin: auto !important;
+}
+
+.modal-title {
+  margin-bottom: 0;
+  line-height: 1.5;
+  color: revert;
+  font-family: cursive;
+}
+
+.btn-primary {
+  box-shadow: 2px 1px 5px 0px;
+  color: #00e7ffd6 !important;
+  border: none !important;
+  background-color: #424242 !important;
+  border-radius: 10px !important;
+  font-family: serif !important;
+}
+
+.btn-primary:hover {
+  box-shadow: 2px 1px 10px 0px !important;
+  color: #00e5ff !important;
+}
+
+.modal-body {
+  position: relative;
+  flex: 1 1 auto;
+  padding: 1rem;
+}
+
+
+
+
+.btn-outline-success {
+  color: #3bb3b3;
+  border-color: #3f97bb;
+}
+
+
+.moviesdetails{
+  width: 50px; 
+  height: 50px;
+}
+
+element.style {
+  background-color: black;
+  color: gray;
+  font-family: none;
+}
